2007-05-26  Jari Aalto  <jari aalto A T cante net>

	* t2html.pl (UrlInclude): Added new option $mode.x
	(DoLine): Added new feature#INCLUDE-raw: to embed content
	as is.

2007-05-25  Jari Aalto  <jari aalto A T cante net>

	* t2html.pl (MakeHeadingName): Increased word grab from 5 to 8

2007-05-24  Jari Aalto  <jari aalto A T cante net>

	* t2html.pl (XlatTag2html): Added few french and spanish
	symbols.

2007-05-23  Jari Aalto  <jari aalto A T cante net>

	* t2html.pl (UrlInclude): Added calls to process the
	included file: #URL substitution etc.
	(XlatUrlInline): Added 'm'ultiline modifier.

2007-03-09  Jari Aalto  <jari aalto A T cante net>

	* t2html.pl (XlatTag2html): Added raquo, laquo

2007-03-01  Jari Aalto  <jari aalto A T cante net>

	* t2html.pl
	-- changed some HERE documents to use qq() to that
	   Emacs cperl-mode fontifies the code correctly.
	(DoLine): Fixed long standing bug where first paragraph
	after heading was not surrounded by the usual
	<p class="column8">.
	(ReadLinksBasic): Improved regexp to match link's
	last character better.
	(DOC::HELP): Mention that XHTML strict cannot be achived,
	because program was never designed for that.
	(TestPage): Improved error handling.
	(TestStyle): New.
	(WriteFile): Accept ARRAY or SCALAR(string).
	(TestPage): Added 4th test to demontrate external style file.
	Removed unnecessary exmaples.

2007-02-27  Jari Aalto  <jari aalto A T cante net>

	* t2html.pl
	(top level): added 'use locale'.
	(MakeHeadingName): More words: from 5 to 8.
	Also delete punctuation. Handle Latin-1 conversions
	better.
	(IsHeading): Use [:upper:] instead of [A-Z]
	(XlatDirectives): Fixed empty #t2html-comment and number "1"
	error in output.

2007-02-21  Jari Aalto  <jari aalto A T cante net>

	* t2html.pl (XlatUrl): If A HEREF was already handled then do
	nothing. This fixes bug where XlatUrlInline() already
	converted the URL.

2006-12-05  Jari Aalto  <jaalto A T gamma tpu fi>
